--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -3,6 +3,7 @@
 <div class="row">
     <div class="large-12 columns">
     <h1>Twitter App</h1>
+    <img src="{{url_for('main.simple')}}" />
     </div>
 </div>
 {% endblock %}
