--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -3,6 +3,15 @@
 <div class="row">
     <div class="large-12 columns">
     <h1>Twitter App</h1>
+</div>
+<form>
+  <div class="row">
+    <div class="large-12 columns">
+      <label>Input Label</label>
+      <input type="text" placeholder="Enter a Twitter hadle?" />
+    </div>
+  </div>
+</form>
     <img src="{{url_for('main.simple')}}" />
     </div>
 </div>
