--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,11 @@
     <!-- Left Nav Section -->
     <ul class="left">
       <li class="divider"></li> 
-         <li class="active"><a href="{{ url_for('main.index') }}">Dashboard</a></li>
+         <li class="active"><a href="{{ url_for('main.index', category='tech') }}">Tech</a></li>
+      <li class="divider"></li> 
+         <li class="active"><a href="{{ url_for('main.index', category='sports') }}">Sports</a></li>
+      <li class="divider"></li> 
+         <li class="active"><a href="{{ url_for('main.index', category='celebrity') }}">Celebrity</a></li>
       <li class="divider"></li>
          <li class="active"><a href="{{ url_for('main.about') }}">About the Team</a></li>          
     </ul>
