--- a/app/templates/main/words.html
+++ b/app/templates/main/words.html
@@ -2,7 +2,11 @@
 {% block body %}
 <div class="row">
     <div class="large-12 columns">
+    {% if search %}
+    <h1>Words that get the Tweets: {{search}}</h1>   
+    {% else %} 
     <h1>Words that get the Tweets</h1>
+    {% endif %}
 </div>
 <form method="POST" action = "" class="form" >
   <div class="row collapse">
@@ -17,8 +21,8 @@
 </form>
 {% if word_score %}
 <div class="row">
-  <div class="large-6 small-12 columns">
-    <h2>word_score</h2>
+  <div class="large-12 small-12 columns">
+    <h4>{{ search }} Score: {{ word_score }}</h4>
   </div>
 </div>
 {% endif %}
