--- a/app/templates/main/explore.html
+++ b/app/templates/main/explore.html
@@ -16,6 +16,8 @@
     <div class="small-4 columns">
       <button class="button small" type="submit">Submit</button>
     </div>
+    <div class="large-12 columns"> 
+      <h4>Sample Values:</h4>
     </div>
   </div>
 </form>
