--- a/app/templates/main/explore.html
+++ b/app/templates/main/explore.html
@@ -19,7 +19,7 @@
     <div class="large-12 columns"> 
       <h4>Sample Values:</h4>
       {% if category == 'sports' %}
-        <p>@shaq, #nfl</p>
+        <p>@shaq</p>
       {% elif category == 'celebrity' %}
         <p>@theellenshow</p>
       {% elif category == 'tech' %}
