--- a/app/templates/main/words.html
+++ b/app/templates/main/words.html
@@ -16,6 +16,8 @@
     <div class="small-4 columns">
       <button class="button small" type="submit">Submit</button>
     </div>
+      <h4>Sample Values:</h4>
+        <p>thanksgiving, world</p>
     </div>
   </div>
 </form>
