--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,8 @@
   <section class="top-bar-section">
     <!-- Left Nav Section -->
     <ul class="left">
+      <li class="divider"></li>
+         <li class="active"><a href="{{ url_for('main.index') }}">Home</a></li>          
       <li class="divider"></li> 
          <li class="active"><a href="{{ url_for('main.explore', category='tech') }}">Tech</a></li>
       <li class="divider"></li> 
@@ -28,8 +30,6 @@
          <li class="active"><a href="{{ url_for('main.explore', category='celebrity') }}">Celebrity</a></li>
       <li class="divider"></li> 
          <li class="active"><a href="{{ url_for('main.words') }}">Trending Words</a></li>         
-      <li class="divider"></li>
-         <li class="active"><a href="{{ url_for('main.about') }}">About the Team</a></li>          
     </ul>
   </section>
 </nav>
